--- a/core/res/res/values/velvet_symbols.xml
+++ b/core/res/res/values/velvet_symbols.xml
@@ -28,4 +28,8 @@
     <!-- Package Manager -->
     <java-symbol type="array" name="config_disabledComponents" />
 
+    <!-- Package Manager -->
+    <java-symbol type="array" name="config_disabledComponents" />
+    <java-symbol type="array" name="config_forceEnabledComponents" />
+
 </resources>
