--- a/core/res/res/values/velvet_symbols.xml
+++ b/core/res/res/values/velvet_symbols.xml
@@ -32,4 +32,7 @@
     <java-symbol type="array" name="config_disabledComponents" />
     <java-symbol type="array" name="config_forceEnabledComponents" />
 
+    <!-- Automatic brightness enhancements -->
+    <java-symbol type="integer" name="config_autoBrightnessBrighteningLightFastDebounce"/>
+
 </resources>
