--- a/core/res/res/values/velvet_symbols.xml
+++ b/core/res/res/values/velvet_symbols.xml
@@ -35,4 +35,10 @@
     <!-- Vendor warning -->
     <java-symbol type="string" name="system_error_vendorprint" />
 
+    <!-- Power menu reboot -->
+    <java-symbol name="reboot_confirm" type="string" />
+    <java-symbol name="reboot_title" type="string" />
+    <java-symbol name="ic_lock_power_reboot" type="drawable" />
+    <java-symbol name="global_action_reboot" type="string" />
+
 </resources>
