--- a/packages/SystemUI/res/values/velvet_strings.xml
+++ b/packages/SystemUI/res/values/velvet_strings.xml
@@ -27,4 +27,8 @@
     <string name="quick_settings_tile_flashlight_not_title">Flashlight is on</string>
     <string name="quick_settings_tile_flashlight_not_summary">Tap to turn off</string>
 
+    <!-- SystemUI Tuner Parts -->
+    <string name="systemui_tuner_statusbar_title">Status Bar Items</string>
+    <string name="systemui_tuner_other_title">System UI Settings</string>
+
 </resources>
