--- a/core/res/res/values/velvet_symbols.xml
+++ b/core/res/res/values/velvet_symbols.xml
@@ -35,4 +35,7 @@
     <!-- Automatic brightness enhancements -->
     <java-symbol type="integer" name="config_autoBrightnessBrighteningLightFastDebounce"/>
 
+    <!-- Screenrecord -->
+    <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
 </resources>
