--- a/packages/SystemUI/res/layout-land/nav_bar_tuner.xml
+++ b/packages/SystemUI/res/layout-land/nav_bar_tuner.xml
@@ -28,7 +28,7 @@
         android:paddingBottom="12dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:background="@android:color/white"
+        android:background="?android:attr/colorBackground"
         android:gravity="center"
         android:orientation="vertical">
 
